add the theme mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<button id="mode">Day / Night</button>
 	<div id="clock">8:10:45</div>
 
 	<script src="index.js"></script>
