modify day night icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<button id="mode">Day / Night</button>
+	<img src="dark-mode.png" alt="" id="mode">
+	<!-- <button >Day / Night</button> -->
 	<div id="clock">8:10:45</div>
 
 	<script src="index.js"></script>
