change the theme day night

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	<title>Digital Clock</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
-	<img src="dark-mode.png" alt="" id="mode">
-	<!-- <button >Day / Night</button> -->
+<body id="mode"> 
 	<div id="clock">8:10:45</div>
 
 	<script src="index.js"></script>
