adding day,month

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content=
-	"width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Digital Clock</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body id="mode"> 
+<body id="mode" class="light"> 
 	<div id="clock">8:10:45</div>
+	<div id="date">Friday, April 12, 2025</div>
 
 	<script src="index.js"></script>
 </body>
